--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,17 @@
   top: 10px;
   left: 10px;
 }
+#info-popover {
+  position: fixed;
+  z-index: 3;
+  background-color: white;
+  display: none;
+  padding: 5px;
+  -webkit-box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.38);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.38);
+  border-top: 3px solid #e91e63;
+}
 #loading {
   position: fixed;
   top: 0;
@@ -26,7 +37,7 @@
   z-index: 3;
   color: #ffffff;
   font-size: 60px;
-  background-color: rgba(0,0,0,.8);
+  background-color: rgba(0, 0, 0, 0.8);
   text-align: center;
   display: none;
 }
@@ -45,7 +56,7 @@
   top: 10px;
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 2;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 .control-head {
   font-size: 20px;
@@ -67,7 +78,7 @@
   right: -194px;
   top: 0;
   padding: 10px;
-  background-color: #E91E63;
+  background-color: #e91e63;
   font-size: 20px;
   color: white;
   border-top-right-radius: 20px;
