--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,22 @@
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.38);
   border-top: 3px solid #e91e63;
 }
+#actions {
+  position: fixed;
+  z-index: 3;
+  background-color: #f6e58d;
+  width: 200px;
+  left: 50%;
+  margin-left: -100px;
+  top: 0;
+  /* color: white; */
+  font-size: 20px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
 #loading {
   position: fixed;
   top: 0;
